--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
                 <a class="website-logo" href="./index.html">Web<span class="website-logo-dark"
                         rel="noopener noreferrer ">Studio</span></a>
                 <ul class="navigation-menu navigation-menu-flex">
-                    <li class="navigation-menu-item"><a class="navigation-menu-item-link" href="./index.html"
+                    <li class="navigation-menu-item-link"><a class="navigation-menu-item-link" href="./index.html"
                             target="_blank" rel="noopener noreferrer ">Studio</a>
                     </li>
-                    <li><a class="navigation-menu-item-link" href="" target="_blank"
+                    <li class="navigation-menu-item-link"><a class="navigation-menu-item-link" href="" target="_blank"
                             rel="noopener noreferrer ">Portfolio</a></li>
-                    <li><a class="navigation-menu-item-link" href="" target="_blank"
+                    <li class="navigation-menu-item-link"><a class="navigation-menu-item-link" href="" target="_blank"
                             rel="noopener noreferrer ">Contacts</a>
                     </li>
                 </ul>
@@ -38,10 +38,10 @@
 
             <address class="address address">
                 <ul class="address-menu address-menu-flex">
-                    <li class="address-menu-item"><a class="address-menu-item-link" href="mailto:info@devstudio.com"
-                            rel="noopener noreferrer ">info@devstudio.com</a></li>
-                    <li class="address-menu-item"><a class="address-menu-item-link" href="tel:+110001111111"
-                            rel="noopener noreferrer">+11 (000) 111-11-11</a></li>
+                    <li class="address-menu-item navigation-menu-item-link"><a class="address-menu-item-link"
+                            href="mailto:info@devstudio.com" rel="noopener noreferrer ">info@devstudio.com</a></li>
+                    <li class="address-menu-item navigation-menu-item-link"><a class="address-menu-item-link"
+                            href="tel:+110001111111" rel="noopener noreferrer">+11 (000) 111-11-11</a></li>
                 </ul>
             </address>
         </div>
@@ -66,7 +66,7 @@
         <section class="section">
 
             <div class="container">
-                <h2 class="section-title">Our Features</h2>
+                <h2 class="section-title visually-hidden">Our Features</h2>
                 <ul class="list-flex">
                     <li class="list-flex-item">
                         <h3 class="section-list-title">Strategy</h3>
@@ -216,16 +216,14 @@
     <footer class="footer">
 
         <div class="container">
-            <div class="footer-container">
-                <a class="website-logo footer-logo" href="./index.html" rel="noopener noreferrer "> Web<span
-                        class="website-logo-light">Studio</span></a>
-                <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing
-                    &
-                    growth solutions.</p>
-            </div>
-
+            <a class="website-logo footer-logo-site" href="./index.html" rel="noopener noreferrer "> Web<span
+                    class="website-logo-light">Studio</span></a>
+            <p class="footer-text-description">Increase the flow of customers and sales for your business with
+                digital marketing
+                &
+                growth solutions.</p>
         </div>
-
+        </div>
     </footer>
 
     <!-- #endregion -->
